--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<h1>Sample App Home</h1>
+<p><img src="https://static.pexels.com/photos/909/flowers-garden-colorful-colourful.jpg" height=300px></p>
