--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,5 @@
+<% provide(:title, "Help") %>
 <h1>Help</h1>
 <p><img src="http://images.clipartpanda.com/question-question_mark_blue.png" height=300px></p>
+  
+
