--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
+<% provide(:title, "Home") %>
 <h1>Sample App Home</h1>
 <p><img src="https://static.pexels.com/photos/909/flowers-garden-colorful-colourful.jpg" height=300px></p>
+
