--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,5 @@
 <h1>Sample App Home</h1>
 <p><img src="https://static.pexels.com/photos/909/flowers-garden-colorful-colourful.jpg" height=300px></p>
+<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+<%= link_to image_tag("http://rubyonrails.org/images/rails-logo.svg", alt: "Rails logo", height: '78', width: '220') %>
 
