--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,13 @@
-<h1>Sample App Home</h1>
-<p><img src="https://static.pexels.com/photos/909/flowers-garden-colorful-colourful.jpg" height=300px></p>
-<%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+<div class="center jumbotron">
+  <h1>Welcome to the Sample App</h1>
+
+  <h2>
+    This is the home page for the
+    <a href="http://www.railstutorial.org/">Ruby on Rails Tutorial</a>
+    sample application.
+  </h2>
+
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
 <%= link_to image_tag("http://rubyonrails.org/images/rails-logo.svg", alt: "Rails logo", height: '78', width: '220') %>
 
